samples/_failures_safe/1761659920_a84248_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50cfc59d.c: In function ‘main’:
./samples/SAFE/__tmp_50cfc59d.c:167:18: error: expected ‘]’ at end of input
  167 |         input[len
      |                  ^
      |                  ]
./samples/SAFE/__tmp_50cfc59d.c:167:9: error: expected declaration or statement at end of input
  167 |         input[len
      |         ^~~~~
./samples/SAFE/__tmp_50cfc59d.c:167:9: error: expected declaration or statement at end of input
